--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#212121" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <style>
+      body {
+        background-color: #212121;
+      }
+    </style>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -60,8 +67,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div id="drawer-root"></div>
     <div id="modal-root"></div>
+    <div id="drawer-root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
